--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,24 @@
+body a {
+  transition: 0.5s all;
+  -webkit-transition: 0.5s all;
+  -o-transition: 0.5s all;
+  -moz-transition: 0.5s all;
+  -ms-transition: 0.5s all;
+}
+html, body{
+    font-size: 100%;
+	font-family: 'Roboto', sans-serif;
+}
+body{
+	background:#FFFFFF;
+}
+body a:hover {
+    text-decoration: none;
+}
+
+
+
+
 /*-- team --*/
 .team{
 	background:url(../images/bg.jpg) no-repeat 0px 0px;
